--- a/src/styles/library.scss
+++ b/src/styles/library.scss
@@ -1,9 +1,10 @@
 .library {
    
-    position: fixed;
+    position:absolute;
     top: 0;
     left: 0;
-    width: 20rem;
+    padding: 0.3rem;
+    max-width: 21rem;
     height: 100%;
     overflow: scroll;
     box-shadow: 2px 2px 50px rgb(204, 208, 239);
@@ -20,17 +21,18 @@
         width: 30%;
     }
     &:hover {
-        background-color: rgb(204, 208, 239);
+    color: rgb(220, 254, 186);
     }
 }
 
 .song-desciption {
     padding-left: 1rem;
     h3 {
-        font-size: 1rem;
+        font-size: 1.2rem;
+      
     }
     h4{
-        font-size: 0.7rem;
+        font-size: 0.9rem;
     }
 }
 
@@ -48,14 +50,20 @@
 
 h3,h4 {
     font-weight: 200;
-    color:rgb(95, 95, 95)
+    color: rgb(92, 97, 89);
 }
 
-.selected  {
-    background: rgb(189, 212, 252);
-}
+
 .active-library {
 transform: translateX(0%);
 opacity: 1;
+background-image: linear-gradient(120deg, #f1f1f1 0%, #ffffff 100%);
 
+}
+
+.library-heading {
+    text-align: center;
+     margin-top: 0.3rem;
+        margin-bottom: 0.3rem;
+        color: rgb(96, 143, 49);
 }
